added profile description

--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
                         <div class="skill-chip">MySQL</div>
                     </div>
                     <p class="profile-bio">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt officiis, tenetur rerum fuga labore ab facilis culpa iusto unde? Sapiente animi repudiandae velit doloremque laboriosam soluta quis cumque assumenda corrupti.
-                    </p>
+                        I am a self-driven learner with a strong passion for problem-solving. 
+Currently, I am focusing on enhancing my frontend development skills, building a solid foundation in web technologies. I am pursuing a Bachelor of Science (BSc) in Information and Communication Technology (ICT) from Mawlana Bhashani Science and Technology University.
+                        </p>
 
                 </div>
                 
